Don't close the same file descriptors twice.  b=367817  r+sr=darin